--- a/src/mission.html
+++ b/src/mission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission Progress</title>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="../img/icon.png">
     <style>
         html,
         body {
@@ -40,7 +40,7 @@
             justify-content: center;
             align-items: flex-start;
             margin: 5%;
-            background-image: url("img/mine.svg");
+            background-image: url("../img/mine.svg");
 
             background-size: 100% 100%;
             position: relative;
@@ -84,35 +84,40 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="green">
-        <div class="left">
-            <img src="img/logo.PNG" alt="logo" width="60%">
-            <div class="map" id="map">
-                <img src="img/blue_ball.png" alt="blue_ball" id="blue_ball" width="2%" style="position: absolute;">
-                <img src="img/purple_ball.png" alt="purple_ball" id="purple_ball" width="2%" style="position: absolute;">
-                <img src="img/red_ball.png" alt="red_ball" id="red_ball" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball1.png" alt="yellow_ball" id="yellow_ball1" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball2.png" alt="yellow_ball" id="yellow_ball2" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball3.png" alt="yellow_ball" id="yellow_ball3" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball4.png" alt="yellow_ball" id="yellow_ball4" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball5.png" alt="yellow_ball" id="yellow_ball5" width="2%" style="position: absolute;">
-                <img src="img/yellow_ball6.png" alt="yellow_ball" id="yellow_ball6" width="2%" style="position: absolute;">
-                <img src="img/drone.png" alt="drone" id="drone" width="5%" style="position: absolute;">
+
+    <div class="container">
+        <div class="green">
+            <div class="left">
+                <img src="../img/logo.PNG" alt="logo" width="60%">
+                <div class="map" id="map">
+                    <img src="../img/blue_ball.png" alt="blue_ball" id="blue_ball" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/purple_ball.png" alt="purple_ball" id="purple_ball" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/red_ball.png" alt="red_ball" id="red_ball" width="2%" style="position: absolute;">
+                    <img src="../img/yellow_ball1.png" alt="yellow_ball" id="yellow_ball1" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/yellow_ball2.png" alt="yellow_ball" id="yellow_ball2" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/yellow_ball3.png" alt="yellow_ball" id="yellow_ball3" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/yellow_ball4.png" alt="yellow_ball" id="yellow_ball4" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/yellow_ball5.png" alt="yellow_ball" id="yellow_ball5" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/yellow_ball6.png" alt="yellow_ball" id="yellow_ball6" width="2%"
+                        style="position: absolute;">
+                    <img src="../img/drone.png" alt="drone" id="drone" width="5%" style="position: absolute;">
 
                 </div>
                 <div class="icons">
-                <div></div>
-                    <img src="img/drone.png" alt="drone" width="20%">Drone
-                </div>
-                <div>
-                    <img src="img/purple_ball.png" alt="blue_ball" width="15%">Balls
-                </div>
-                <div>
-                    <img src="img/parking.png" alt="purple_ball" width="10%">Robot parking
-                </div>
-                <div>
-                    <img src="img/takeoff.png" alt="red_ball" width="10%">Drone takeoff & landing site
+
+                    <div><img src="../img/drone.png" alt="drone" width="20%">Drone</div>
+                    <div><img src="../img/purple_ball.png" alt="blue_ball" width="15%">Balls</div>
+                    <div><img src="../img/parking.png" alt="purple_ball" width="10%">Robot parking</div>
+                    <div><img src="../img/takeoff.png" alt="red_ball" width="10%">Drone takeoff & landing site</div>
+
+
                 </div>
 
 
@@ -162,7 +167,7 @@
 
                 <div class="button_class">
 
-                    <button class="button"><a href="raport.pdf" download>Generate PDF</a></button>
+                    <button class="button"><a href="../raport.pdf" download>Generate PDF</a></button>
 
 
                 </div>
