--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start</title>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="../img/icon.png">
     <style>
         html,
         body {
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/logo.PNG" alt="logo">
+        <img src="../img/logo.PNG" alt="logo">
         <button><a href="mission.html">Start Mission</a></button>
     </div>
 </body>
